--- a/proyecto_des.ipynb
+++ b/proyecto_des.ipynb
@@ -32,7 +32,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Datos: describa los datos utilizados y su origen, y documente los procedimientos de recolección, preparación y transformación de datos. Describa los datos indicando el tipo de datos, su estructura y los elementos que se describen en la bae de datos.\n"
+    "Datos: describa los datos utilizados y su origen, y documente los procedimientos de recolección, preparación y transformación de datos. Describa los datos indicando el tipo de datos, su estructura y los elementos que se describen en la base de datos.\n",
+    "\n",
+    "Ambos datasets han sido recopilados desde la fuente pública de datos del departamento de estadísticas e información de salud del gobierno, obtenido de: https://deis.minsal.cl/. Los tipos de datos estan dados por un excel adjunto que habla sobre eso y detalla más a fondo. Son datos semi-estructurados. Son datos medicos sobre las causas de muerte de pacientes y los egresos de los medicos. "
    ]
   },
   {
