--- a/data/lol.ipynb
+++ b/data/lol.ipynb
@@ -667,9 +667,9 @@
    ],
    "source": [
     "egresos = pd.read_csv(\"EGRE_DATOS_ABIERTOS_2020.csv\", sep=\";\", encoding=\"latin-1\")\n",
-    "egresos1 = egresos[egresos['CONDICION_EGRESO'] == 2]\n",
-    "egresos2 = egresos1['CONDICION_EGRESO'].value_counts().get(2, 0)\n",
-    "egresos3 = egresos2[egresos2['SEXO'] != '*'].reset_index(drop=True)\n",
+    "egresos = egresos[egresos['CONDICION_EGRESO'] == 2]\n",
+    "egresos2 = egresos['CONDICION_EGRESO'].value_counts().get(2, 0)\n",
+    "egresos3 = egresos[egresos['SEXO'] != '*'].reset_index(drop=True)\n",
     "# CANTIDAD DE MUERTOS EN 2020 EN EGRESO  \n",
     "print(egresos3.keys())\n",
     "egresos3"
