--- a/egresos.ipynb
+++ b/egresos.ipynb
@@ -384,26 +384,422 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo no encontrado: egresos/EGRESOS_2020/EGRE_DATOS_ABIERTOS_2020.csv\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "años = range(2001, 2022)\n",
-    "\n",
-    "# Crear un diccionario para almacenar los DataFrames\n",
     "dataframes = {}\n",
-    "\n",
-    "# Leer archivos y almacenarlos en el diccionario\n",
     "for año in años:\n",
     "    archivo = f\"egresos/EGRESOS_{año}/EGRE_DATOS_ABIERTOS_{año}.csv\"\n",
     "    try:\n",
     "        df = pd.read_csv(archivo, sep=\";\", encoding=\"latin-1\", low_memory=False)\n",
-    "        dataframes[año] = df  # Almacenar DataFrame con el año como clave\n",
+    "        dataframes[año] = df \n",
     "    except FileNotFoundError:\n",
-    "        print(f\"Archivo no encontrado: {archivo}\")\n",
-    "\n",
-    "# Si necesitas un DataFrame específico, puedes acceder así:\n",
-    "df_2001 = dataframes[2001]\n"
+    "        print(f\"Archivo no encontrado: {archivo}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PERTENENCIA_ESTABLECIMIENTO_SALUD</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>GRUPO_EDAD</th>\n",
+       "      <th>ETNIA</th>\n",
+       "      <th>GLOSA_PAIS_ORIGEN</th>\n",
+       "      <th>COMUNA_RESIDENCIA</th>\n",
+       "      <th>GLOSA_COMUNA_RESIDENCIA</th>\n",
+       "      <th>REGION_RESIDENCIA</th>\n",
+       "      <th>GLOSA_REGION_RESIDENCIA</th>\n",
+       "      <th>PREVISION</th>\n",
+       "      <th>GLOSA_PREVISION</th>\n",
+       "      <th>ANO_EGRESO</th>\n",
+       "      <th>DIAG1</th>\n",
+       "      <th>DIAG2</th>\n",
+       "      <th>DIAS_ESTADA</th>\n",
+       "      <th>CONDICION_EGRESO</th>\n",
+       "      <th>INTERV_Q</th>\n",
+       "      <th>PROCED</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No Pertenecientes al Sistema Nacional de Servi...</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>1 a 9</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>01</td>\n",
+       "      <td>De Tarapacá</td>\n",
+       "      <td>99</td>\n",
+       "      <td>DESCONOCIDO</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>G563</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No Pertenecientes al Sistema Nacional de Servi...</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>1 a 9</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>01</td>\n",
+       "      <td>De Tarapacá</td>\n",
+       "      <td>99</td>\n",
+       "      <td>DESCONOCIDO</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>J350</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>No Pertenecientes al Sistema Nacional de Servi...</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>1 a 9</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>01</td>\n",
+       "      <td>De Tarapacá</td>\n",
+       "      <td>99</td>\n",
+       "      <td>DESCONOCIDO</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>J359</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>No Pertenecientes al Sistema Nacional de Servi...</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>1 a 9</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>01</td>\n",
+       "      <td>De Tarapacá</td>\n",
+       "      <td>99</td>\n",
+       "      <td>DESCONOCIDO</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>Q549</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>No Pertenecientes al Sistema Nacional de Servi...</td>\n",
+       "      <td>HOMBRE</td>\n",
+       "      <td>1 a 9</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>sin informacion</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>01</td>\n",
+       "      <td>De Tarapacá</td>\n",
+       "      <td>99</td>\n",
+       "      <td>DESCONOCIDO</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>C692</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566183</th>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>N200</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566184</th>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>P050</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566185</th>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>Q790</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566186</th>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>P050</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>105</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1566187</th>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>1101</td>\n",
+       "      <td>Iquique</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>A419</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>83</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1566188 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         PERTENENCIA_ESTABLECIMIENTO_SALUD    SEXO GRUPO_EDAD  \\\n",
+       "0        No Pertenecientes al Sistema Nacional de Servi...  HOMBRE      1 a 9   \n",
+       "1        No Pertenecientes al Sistema Nacional de Servi...  HOMBRE      1 a 9   \n",
+       "2        No Pertenecientes al Sistema Nacional de Servi...  HOMBRE      1 a 9   \n",
+       "3        No Pertenecientes al Sistema Nacional de Servi...  HOMBRE      1 a 9   \n",
+       "4        No Pertenecientes al Sistema Nacional de Servi...  HOMBRE      1 a 9   \n",
+       "...                                                    ...     ...        ...   \n",
+       "1566183                                                  *       *          *   \n",
+       "1566184                                                  *       *          *   \n",
+       "1566185                                                  *       *          *   \n",
+       "1566186                                                  *       *          *   \n",
+       "1566187                                                  *       *          *   \n",
+       "\n",
+       "                   ETNIA GLOSA_PAIS_ORIGEN  COMUNA_RESIDENCIA  \\\n",
+       "0        sin informacion   sin informacion               1101   \n",
+       "1        sin informacion   sin informacion               1101   \n",
+       "2        sin informacion   sin informacion               1101   \n",
+       "3        sin informacion   sin informacion               1101   \n",
+       "4        sin informacion   sin informacion               1101   \n",
+       "...                  ...               ...                ...   \n",
+       "1566183                *                 *               1101   \n",
+       "1566184                *                 *               1101   \n",
+       "1566185                *                 *               1101   \n",
+       "1566186                *                 *               1101   \n",
+       "1566187                *                 *               1101   \n",
+       "\n",
+       "        GLOSA_COMUNA_RESIDENCIA REGION_RESIDENCIA GLOSA_REGION_RESIDENCIA  \\\n",
+       "0                       Iquique                01             De Tarapacá   \n",
+       "1                       Iquique                01             De Tarapacá   \n",
+       "2                       Iquique                01             De Tarapacá   \n",
+       "3                       Iquique                01             De Tarapacá   \n",
+       "4                       Iquique                01             De Tarapacá   \n",
+       "...                         ...               ...                     ...   \n",
+       "1566183                 Iquique                 *                       *   \n",
+       "1566184                 Iquique                 *                       *   \n",
+       "1566185                 Iquique                 *                       *   \n",
+       "1566186                 Iquique                 *                       *   \n",
+       "1566187                 Iquique                 *                       *   \n",
+       "\n",
+       "        PREVISION GLOSA_PREVISION ANO_EGRESO DIAG1 DIAG2  DIAS_ESTADA  \\\n",
+       "0              99     DESCONOCIDO       2001  G563   NaN            1   \n",
+       "1              99     DESCONOCIDO       2001  J350   NaN            1   \n",
+       "2              99     DESCONOCIDO       2001  J359   NaN            1   \n",
+       "3              99     DESCONOCIDO       2001  Q549   NaN            1   \n",
+       "4              99     DESCONOCIDO       2001  C692   NaN            1   \n",
+       "...           ...             ...        ...   ...   ...          ...   \n",
+       "1566183         *               *          *  N200   NaN            2   \n",
+       "1566184         *               *          *  P050   NaN            1   \n",
+       "1566185         *               *          *  Q790   NaN            1   \n",
+       "1566186         *               *          *  P050   NaN          105   \n",
+       "1566187         *               *          *  A419   NaN           83   \n",
+       "\n",
+       "        CONDICION_EGRESO INTERV_Q PROCED  \n",
+       "0                      1        1    NaN  \n",
+       "1                      1        1    NaN  \n",
+       "2                      1        1    NaN  \n",
+       "3                      1        1    NaN  \n",
+       "4                      1        1    NaN  \n",
+       "...                  ...      ...    ...  \n",
+       "1566183                *        *      *  \n",
+       "1566184                *        *      *  \n",
+       "1566185                *        *      *  \n",
+       "1566186                *        *      *  \n",
+       "1566187                *        *      *  \n",
+       "\n",
+       "[1566188 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_2001 = dataframes[2001]\n",
+    "df_2001\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 4) ¿Qué tan efectivas son las hospitalizaciones en la reducción de la\n",
+    " mortalidad por enfermedades? Aquí consideramos una investigación, con las\n",
+    " causas más comunes de muerte por enfermedades, considerando una\n",
+    " diferencia entre enfermedades tratables y no tratables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 5) ¿Existen factores que explican las variaciones en las tasas de mortalidad y\n",
+    " hospitalizaciones? Considerando un análisis por región (demográfico,\n",
+    " socioeconómico, otros)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
