--- a/proyecto_inicial.ipynb
+++ b/proyecto_inicial.ipynb
@@ -4533,12 +4533,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Analizando todos los graficos presentes podemos concluir que para las causas externas podemos decir que existen distintas causas más comunes para distintos grupos etarios. Pero se ve como siempre esta presente las defunciones por accidentes de trafico, aunque para el caso de la gente mayor a 80 años se ve como hay una causa poco vista siendo por caida. También se ve que en las edades entre 19 y 80 se ve la lesión autoinfligida por estrangulamiento, ahí se puede ver una tendencia por edad.\n",
     "\n",
-    "En el caso de las causas internas se ve claramente que en las edades más avanzadas ocurren más infartos de miocardio, mientras"
+    "En el caso de las causas internas se ve claramente que en las edades más avanzadas ocurren más infartos de miocardio, mientras que en gente más joven, como adolescentes se ve más el asfixia por sumersión y por el consumo de otras sustancias. Mientras que para personas aún más jovenes pasan lesiones craneales, cosa por lo que son conocidos los bebes."
    ]
   },
   {
