--- a/egresos_vania.ipynb
+++ b/egresos_vania.ipynb
@@ -1149,6 +1149,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1206,6 +1220,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        1. Proporciones por género y grupo de edad:\n",
+    "        La tabla presenta la proporción de mortalidad (muerto) y la proporción de sobrevivencia (vivo) para hombres y mujeres, distribuidos por grupos de edad. La proporción de mortalidad está expresada en porcentaje para cada grupo, lo que facilita la comparación entre categorías.\n",
+    "\n",
+    "        2. Tendencias generales:\n",
+    "        Jóvenes (0-9 años y 10-19 años):\n",
+    "\n",
+    "        Las tasas de mortalidad son generalmente bajas tanto para hombres como para mujeres en estos grupos de edad. La proporción de sobrevivientes es superior al 99%.\n",
+    "        La mortalidad es ligeramente mayor en hombres en todos los grupos, pero las diferencias no son grandes.\n",
+    "        Adultos jóvenes (20-39 años):\n",
+    "\n",
+    "        Aquí las tasas de mortalidad empiezan a aumentar, especialmente en hombres, con una proporción que supera el 0.6% en el grupo de 20-29 años y continúa incrementándose en grupos de mayor edad.\n",
+    "        Para las mujeres, la mortalidad sigue siendo baja, pero también comienza a aumentar ligeramente en comparación con los grupos más jóvenes.\n",
+    "        Adultos de mediana edad (40-59 años):\n",
+    "\n",
+    "        A medida que las personas envejecen, la proporción de mortalidad aumenta considerablemente.\n",
+    "        En este grupo, las tasas de mortalidad en hombres superan el 1%, siendo más pronunciada en hombres mayores de 50 años. Las mujeres también muestran un aumento en la mortalidad, pero las tasas siguen siendo más bajas en comparación con los hombres.\n",
+    "        Adultos mayores (60 años en adelante):\n",
+    "\n",
+    "        Las tasas de mortalidad aumentan significativamente, con las diferencias de género más evidentes en los grupos de edad de 60-69 años y 70-79 años. En estos grupos, la mortalidad en hombres es notablemente más alta, alcanzando hasta 6.4% en hombres de 70-79 años.\n",
+    "        En los grupos de 80-89 años y 90 y más, las tasas de mortalidad son muy altas en ambos géneros, pero los hombres siguen mostrando mayores proporciones de mortalidad que las mujeres.\n",
+    "        Menor de un año:\n",
+    "\n",
+    "        La mortalidad para los niños menores de un año es relativamente baja, con proporciones cercanas al 1%, aunque similar para hombres y mujeres.\n",
+    "        3. Análisis de género:\n",
+    "        En la mayoría de los grupos de edad, los hombres tienden a tener una mayor proporción de mortalidad que las mujeres, especialmente en los grupos de mayor edad, como 60 a 69 años, 70 a 79 años y 80 a 89 años. Esta tendencia puede estar relacionada con diferencias biológicas, acceso a la salud, estilos de vida, o factores socioculturales que influyen en la mortalidad.\n",
+    "\n",
+    "        4. Tendencias según la edad:\n",
+    "        A medida que la edad aumenta, la mortalidad también aumenta en ambos géneros, lo que refleja la mayor vulnerabilidad asociada con la edad avanzada.\n",
+    "        En los grupos más jóvenes, las tasas de mortalidad son muy bajas, mientras que en los grupos de 60 años o más, las tasas se disparan, lo que es esperado debido a las condiciones de salud asociadas con el envejecimiento.\n",
+    "        5. Posibles factores a explorar:\n",
+    "        Condiciones de salud prevalentes: En los adultos mayores, las enfermedades crónicas y condiciones relacionadas con la vejez, como enfermedades cardiovasculares, cáncer, diabetes, entre otras, podrían contribuir a un aumento de la mortalidad.\n",
+    "        Estilos de vida y factores de riesgo: El comportamiento de riesgo, como el consumo de tabaco, alcohol, y la falta de actividad física, podría ser un factor importante en la mayor mortalidad en hombres.\n",
+    "        Acceso a atención médica: El acceso desigual a servicios de salud de calidad podría influir en las tasas de mortalidad, especialmente en los grupos de edad más avanzada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1260,27 +1320,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['PERTENENCIA_ESTABLECIMIENTO_SALUD', 'SEXO', 'GRUPO_EDAD',\n",
-       "       'REGION_RESIDENCIA', 'GLOSA_REGION_RESIDENCIA', 'PREVISION',\n",
-       "       'GLOSA_PREVISION', 'ANO_EGRESO', 'DIAG1', 'DIAG2', 'DIAS_ESTADA',\n",
-       "       'CONDICION_EGRESO', 'PERTENENCIA_ESTABLECIMIENTO_SALU'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df.columns"
+    "        Análisis de la Proporción de Mortalidad por Región de Residencia:\n",
+    "        El conjunto de datos muestra las proporciones de mortalidad y supervivencia por región de residencia. Al igual que en el análisis por grupo de edad y género, podemos observar algunas tendencias clave:\n",
+    "\n",
+    "        1. Proporción de Mortalidad:\n",
+    "        Las proporciones de mortalidad varían ligeramente entre las diferentes regiones, pero en general, se encuentran en el rango de 1.3% a 2.6%.\n",
+    "        Las regiones con las proporciones de mortalidad más bajas son la región 02 (1.30%) y la región 10 (1.78%).\n",
+    "        Las regiones con las proporciones más altas son la región 16 (2.58%) y la región 05 (2.35%).\n",
+    "        La variabilidad en las tasas de mortalidad entre las regiones es moderada, con una diferencia de alrededor de 1% entre las regiones de mortalidad más alta y más baja.\n",
+    "        2. Proporción de Supervivencia:\n",
+    "        La proporción de supervivencia es consistentemente alta en todas las regiones, variando entre 97.4% y 98.7%, lo que indica que la mayoría de las personas en cada región sobreviven.\n",
+    "        Las regiones con mayores tasas de supervivencia son la región 10 (98.22%) y la región 11 (98.50%).\n",
+    "        Las regiones con las menores tasas de supervivencia son la región 16 (97.42%) y la región 05 (97.65%).\n",
+    "        3. Análisis comparativo:\n",
+    "        Las regiones con mayor mortalidad (por ejemplo, la región 16) también presentan una ligera disminución en la proporción de supervivencia. Sin embargo, en todas las regiones, las tasas de supervivencia siguen siendo significativamente más altas que las de mortalidad.\n",
+    "        Las diferencias entre las regiones no son extremadamente grandes, lo que sugiere que, en general, las tasas de mortalidad y supervivencia son bastante uniformes en las diferentes áreas de residencia.\n",
+    "        4. Posibles factores a considerar:\n",
+    "        Condiciones de salud regionales: Las diferencias en las tasas de mortalidad entre regiones podrían estar asociadas con la disponibilidad y calidad de los servicios de salud en cada área. Regiones con mayores tasas de mortalidad podrían tener menos acceso a atención médica o a servicios de salud especializados.\n",
+    "        Factores socioeconómicos y ambientales: Factores como el nivel socioeconómico, la educación, las condiciones de vivienda, y la exposición a factores ambientales también podrían influir en las tasas de mortalidad.\n",
+    "        Estilos de vida y factores de riesgo: Diferencias en los estilos de vida, como hábitos alimenticios, ejercicio, consumo de tabaco o alcohol, entre otras, también podrían jugar un papel importante en las variaciones observadas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Región 01: Arica y Parinacota\n",
+    "    Región 02: Tarapacá\n",
+    "    Región 03: Antofagasta\n",
+    "    Región 04: Atacama\n",
+    "    Región 05: Coquimbo\n",
+    "    Región 06: Valparaíso\n",
+    "    Región 07: O'Higgins\n",
+    "    Región 08: Maule\n",
+    "    Región 09: Ñuble\n",
+    "    Región 10: Biobío\n",
+    "    Región 11: La Araucanía\n",
+    "    Región 12: Los Ríos\n",
+    "    Región 13: Los Lagos\n",
+    "    Región 14: Aysén del General Carlos Ibáñez del Campo\n",
+    "    Región 15: Magallanes y de la Antártica Chilena\n",
+    "    Región 16: Metropolitana de Santiago"
    ]
   }
  ],
